@@ -19,12 +19,8 @@ Win32API::File = 0
 remove = PerlIO
 remove = PerlIO::scalar
 remove = Test::Differences
-remove = Inline::C
 ; tests optionally require 5.008
 remove = perl
-
-[Prereqs / TestRecommends]
-Inline::C = 0.50
 
 [Prereqs]
 perl = 5.006
